force-app/main/default/objects/Opportunity/fields/Closed_Date_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_Timestamp__c</fullName>
    <label>Closed Date Timestamp</label>
    <type>DateTime</type>
</CustomField>