force-app/main/default/objects/Opportunity/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <formula>IF(
    ISBLANK(Primary_Contact__c),
    &quot;No Primary Contact&quot;,
    IF(
        ISBLANK(Primary_Contact__r.Email),
        &quot;Missing Email&quot;,
        &quot;Contact Ready&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Status</label>
    <type>Text</type>
</CustomField>