force-app/main/default/objects/Opportunity/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>To categorize opportunity by customer type</description>
    <label>Customer Type</label>
    <length>12</length>
    <type>Text</type>
</CustomField>