force-app/main/default/objects/Opportunity/fields/Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instructions__c</fullName>
    <label>Delivery Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>