force-app/main/default/objects/Opportunity/fields/Effective_Deal_Discount__c.field-meta.xml
<CustomField>
    <fullName>Effective_Deal_Discount__c</fullName>
    <formula>1-((SyncedQuote.Subtotal - Total_Discounted_Amount__c) / SyncedQuote.Subtotal)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Deal Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>