force-app/main/default/objects/Opportunity/fields/Effective_Discount__c.field-meta.xml
<CustomField>
    <fullName>Effective_Discount__c</fullName>
    <formula>IF(
   Total_List_Amount__c &gt; 0,
   MAX(0, (Total_List_Amount__c - Amount) / Total_List_Amount__c),
   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>