force-app/main/default/objects/Opportunity/fields/Financials__c.field-meta.xml
<CustomField>
    <fullName>Financials__c</fullName>
    <formula>IF(
OR(
ISBLANK(Total_List_Amount__c),
ISBLANK(Total_Discount__c),
ISBLANK(Effective_Discount__c),
ISBLANK(Amount),
ISBLANK(VAT_Amount__c),
ISBLANK(Total_Amount__c)
),
&quot;Financials Incomplete&quot;,
&quot;Ready&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financials</label>
    <type>Text</type>
</CustomField>