force-app/main/default/objects/Opportunity/fields/Has_Contact__c.field-meta.xml
<CustomField>
    <fullName>Has_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Contact</label>
    <type>Checkbox</type>
</CustomField>