force-app/main/default/objects/Opportunity/fields/Has_Products__c.field-meta.xml
<CustomField>
    <fullName>Has_Products__c</fullName>
    <formula>Amount &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Products</label>
    <type>Checkbox</type>
</CustomField>