force-app/main/default/objects/Opportunity/fields/Logistics_Notified__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logistics Notified</label>
    <type>Checkbox</type>
</CustomField>