force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Manager__c</fullName>
    <description>For email template use regarding opportunity discount approval</description>
    <formula>Owner.Manager.FirstName + &apos; &apos; + Owner.Manager.LastName</formula>
    <inlineHelpText>For email template use regarding opportunity discount approval</inlineHelpText>
    <label>Opportunity Owner Manager</label>
    <type>Text</type>
</CustomField>