force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <formula>IF(
  ISBLANK( Account.First_Closed_Won_Date__c ),
  &quot;New&quot;,
  IF (
    Closed_Date_Timestamp__c  = Account.First_Closed_Won_Date__c,
    &quot;New&quot;,
    &quot;Repeat&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>