force-app/main/default/objects/Opportunity/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Bottle</fullName>
            </value>
            <value>
                <fullName>Pack of 5</fullName>
            </value>
            <value>
                <fullName>Pack of 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>