force-app/main/default/objects/Opportunity/fields/Products_Status__c.field-meta.xml
<CustomField>
    <fullName>Products_Status__c</fullName>
    <formula>IF(
Amount &lt;= 0,
&quot;No Products&quot;,
&quot;Products Added&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products Status</label>
    <type>Text</type>
</CustomField>