force-app/main/default/objects/Opportunity/fields/Quote_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Quote_Accepted__c</fullName>
    <formula>AND(
   NOT(ISBLANK(SyncedQuoteId)),
   TEXT(SyncedQuote.Status) = &quot;Accepted&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Accepted</label>
    <type>Checkbox</type>
</CustomField>