force-app/main/default/objects/Opportunity/fields/Quote_Exists__c.field-meta.xml
<CustomField>
    <fullName>Quote_Exists__c</fullName>
    <description>Indicates whether a Primary (Synced) Quote is associated with the Opportunity using the standard SyncedQuoteId field.</description>
    <formula>NOT(ISBLANK(SyncedQuoteId))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked when a primary quote is linked to this opportunity. A quote must be synced to be considered.</inlineHelpText>
    <label>Quote Exists</label>
    <type>Checkbox</type>
</CustomField>