force-app/main/default/objects/Opportunity/fields/Quote_Presented__c.field-meta.xml
<CustomField>
    <fullName>Quote_Presented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Presented</label>
    <type>Checkbox</type>
</CustomField>