force-app/main/default/objects/Opportunity/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <formula>IF(
ISBLANK(SyncedQuoteId),
&quot;No Quote&quot;,
IF(
NOT(Quote_Accepted__c),
&quot;Quote Not Accepted&quot;,
&quot;Quote Ready&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Status</label>
    <type>Text</type>
</CustomField>