force-app/main/default/objects/Opportunity/fields/Ready_for_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Delivery_Date__c</fullName>
    <label>Ready for Delivery Date</label>
    <type>Date</type>
</CustomField>