force-app/main/default/objects/Opportunity/fields/Ready_For_Delivery_Execution__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Delivery_Execution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready_For_Delivery_Execution</label>
    <type>Checkbox</type>
</CustomField>