force-app/main/default/objects/Opportunity/fields/Total_Amount_Net_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Net_VAT__c</fullName>
    <formula>SyncedQuote.Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (Net + VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>