force-app/main/default/objects/Opportunity/fields/Total_List_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Amount__c</fullName>
    <description>Total Amount before Discount</description>
    <label>Total List Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>