force-app/main/default/objects/Opportunity/fields/VAT_Amount_20__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount_20__c</fullName>
    <formula>SyncedQuote.VAT_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Amount (20%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>