force-app/main/default/objects/Opportunity/validationRules/Require_Account_For_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Account_For_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED( StageName ),
  NOT(ISPICKVAL(StageName, &quot;New&quot;)),
  ISBLANK(AccountId)
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>You must create an Account for this Opportunity.</errorMessage>
</ValidationRule>