force-app/main/default/objects/Opportunity/listViews/All_Won_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Won_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Won</value>
    </filters>
    <label>All Won Opportunities</label>
    <sharedTo>
        <role>Sales_Director</role>
    </sharedTo>
</ListView>