force-app/main/default/objects/Opportunity/listViews/French_Opportunities.listView-meta.xml
<ListView>
    <fullName>French_Opportunities</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Petit</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Truffaut</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Martin</value>
    </filters>
    <label>French Opportunities</label>
    <sharedTo>
        <role>Sales_Operations_Director_France</role>
    </sharedTo>
</ListView>