force-app/main/default/objects/Opportunity/listViews/Spanish_Opportunities.listView-meta.xml
<ListView>
    <fullName>Spanish_Opportunities</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Iniesta</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Garcia</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Ricardo</value>
    </filters>
    <label>Spanish Opportunities</label>
    <sharedTo>
        <role>Sales_Operations_Director_Spain</role>
    </sharedTo>
</ListView>